Correcciones tarea 3 ejercicio 1 gerardo

--- a/Tarea3_GGonzalez_JAMayagoitia.ipynb
+++ b/Tarea3_GGonzalez_JAMayagoitia.ipynb
@@ -52,6 +52,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.0, 1.0, 2.0, 9.0, 44.0, 265.0]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d1, d2, n = 0, 1, 6\n",
+    "\n",
+    "def ecuacionrecursiva(d1, d2, n):\n",
+    "    d = np.zeros(n)\n",
+    "    d[0], d[1] = d1, d2\n",
+    "    \n",
+    "    def solucion(i):\n",
+    "        nonlocal d\n",
+    "        d[i] = (i) * d[i - 1] + (i) * d[i - 2]\n",
+    "    [solucion(i) for i in range(2, n)]\n",
+    "    return d\n",
+    "    \n",
+    "terms = list(ecuacionrecursiva(d1, d2, n))\n",
+    "terms"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,28 +93,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 2, 3, 4, 5, 6, 7, 8]"
+       "array([2, 3, 4, 5])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Código de solución estudiante 1\n",
-    "N = np.arange(2,10)\n",
-    "d1=0\n",
-    "d2=1\n",
+    "import numpy as np\n",
+    "def ecuacion_recursiva(d1:'primer valor', d2:'segundo valor',\n",
+    "                       N:'numero de terminos'):\n",
+    "    \n",
+    "    n = np.arange(start=3, stop=N)\n",
+    "    return (n-1)*d1 + (n-1)*d2\n",
     "\n",
-    "solucion1 = list(map(lambda n: ((n-1)*d1+(n-1)*d2 if n>=3 else 0), N))\n",
-    "solucion1\n"
+    "d1, d2, N = 0, 1, 7\n",
+    "\n",
+    "ecuacion_recursiva(d1, d2, N)\n",
+    "\n"
    ]
   },
   {
